--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3.8"
 services:
+  my-app:
+    build: .
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/src/app
+      - /src/app/node_modules
+
   mongo-experiment:
     image: mongo:4.2.1
     ports:
@@ -7,6 +15,9 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: user
       MONGO_INITDB_ROOT_PASSWORD: password
+
+    volumes:
+      - mongo-data-experiment:/data/db
 
   mongo-express-experiment:
     image: mongo-express:0.49
@@ -16,3 +27,7 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: user
       ME_CONFIG_MONGODB_ADMINPASSWORD: password
       ME_CONFIG_MONGODB_SERVER: mongo-experiment
+
+volumes:
+  mongo-data-experiment:
+    driver: local
